# ansible-collection-cherryservers

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  codecov.yml  galaxy.yml  pylintrc.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: black.yml  ci.yml  integration-tests.yml  publish.yml  sanity-tests.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: add-server-cycle.yaml  api-key-param.yaml  delete-floating-ip-after-server-test.yaml  drop-support-for-ansible-2.16.yaml  drop-support-for-python-3.9.yaml  increase-request-timeout-length.yaml  ipxe.yaml  prebuilt-servers.yaml  remove-ddos-scrubbing.yaml  retain-ssh-keys-and-images-on-server-reinstall.yaml  wait-for-active-server-reinstall.yaml
meta/: runtime.yml
plugins/doc_fragments/: cherryservers.py
plugins/inventory/: cherryservers.py
plugins/module_utils/: _version.py  base_module.py  cherry_module.py  client.py  common.py  constants.py  info_module.py  info_module_base.py  module.py  normalizers.py  standard_module.py  wrapper.py
plugins/module_utils/resource_managers/: floating_ip_manager.py  plan_manager.py  prebuilt_manager.py  project_manager.py  resource_manager.py  server_manager.py  sshkey_manager.py  storage_manager.py
plugins/modules/: floating_ip.py  floating_ip_info.py  plan_info.py  prebuilt_info.py  project.py  project_info.py  server.py  server_info.py  sshkey.py  sshkey_info.py  storage.py  storage_info.py
tests/: config.yml
tests/integration/: cloud-config-cherryservers.yml  integration_config.yml.template
tests/utils/: render.sh
(+32 files in other folders)
