[tool.poetry]
name = "cherryservers"
version = "2.1.0"
description = "Cherry Servers Ansible Collection"
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible-core = "^2.18"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pylint = "^3.3.2"
antsibull-changelog = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"